[package]
name = "aseprite"
description = "A crate to load files from the aseprite sprite editor."
version = "0.1.3"
authors = ["Simon Heath <icefoxen@gmail.com>"]
repository = "https://github.com/ggez/aseprite"
documentation = "https://docs.rs/aseprite"
keywords = ["graphics", "2D", "game"]
license = "MIT"
readme = "README.md"
categories = ["games", "rendering::data-formats", "multimedia::images"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
aseprite-test-data  = "0.1.0"
png                 = "0.16.7"
